upgrade spring, sonar refactorings, and new method for adding multiple dishes to an existing list.