@@ -139,8 +139,8 @@ public class TargetSlotEntity {
             return;
         }
         tags =getTagIdsAsList().stream()
-                .filter(t -> dictionary.containsKey(new Long(t)))
-                .map( t -> dictionary.get(new Long(t)))
+                .filter(t -> dictionary.containsKey(Long.valueOf(t)))
+                .map(t -> dictionary.get(Long.valueOf(t)))
                 .collect(Collectors.toList());
 
         if (slotDishTagId!=null &&dictionary.containsKey(slotDishTagId)) {
